# codex-nomad-surface

./: .gitignore  AGENTS.md  README.md  SPEC.md  app.py  chat_store.py  codex_client.py  docker-compose.yml  http_gate.py  promptform_defs.py  pyproject.toml  run.command  skill_defs.py  skins.py
.codex/: config.toml
codex_nomad_surface/: __init__.py  app.py  chat_store.py  codex_client.py  http_gate.py  markdown_rendering.py  promptform_defs.py  selection.py  settings.py  turn_run.py
codex_nomad_surface/ui_components/: __init__.py
codex_nomad_surface/ui_components/assets/: add_starter_button.js  chat_input_outbox.js  promptform.css
docs/: README.md  app-server-api-exceptions.md  development.md
docs/agents/: embedded-response-forms.md
docs/protocols/: codex-form.md  codex-form.schema.json  promptform.md  promptform.schema.json
promptform-defs/: project_work.json  quick_prompt.json
skills/codex-current-maintainer/: SKILL.md
skills/streamlit-current-maintainer/: SKILL.md
skins/: project_work.json  quick_prompt.json
tests/: test_app_markdown.py  test_app_server_launcher.py  test_chat_history_merge.py  test_chat_input_append.py  test_chat_input_attachments.py  test_chat_url_selection.py  test_codex_client.py  test_http_gate.py  test_model_metadata_warning.py  test_project_selection.py  test_settings.py  test_streamlit_upgrade_regression.py  test_turn_run_state.py
ui_components/: __init__.py
ui_components/assets/: chat_input_bridge.js  chat_input_ime_guard.js  codex_embedded_form.css  embedded_form.js  promptform.js  selectbox_mobile_guard.js
(+5 files in other folders)
