[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-nomad-surface"
version = "0.1.0"
description = "A small Streamlit app for remotely operating a host-side Codex App Server from a mobile browser."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "streamlit[starlette]==1.56.0",
    "websockets>=15.0",
]

[tool.setuptools]
packages = [
    "codex_nomad_surface",
    "codex_nomad_surface.ui_components",
]

[tool.setuptools.package-data]
"codex_nomad_surface.ui_components" = ["assets/*.js", "assets/*.css", "assets/*.svg"]

[tool.ruff]
target-version = "py312"
